Added visualization code

--- a/Covid_QA_Analysis.ipynb
+++ b/Covid_QA_Analysis.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "##### Environmental impact:\n",
     "*   GPU Details\n",
-    "*   CO2 emission impact of trainnig the model\n",
+    "*   CO2 emission impact of training the model\n",
     "\n",
     "#### List of models\n",
     "\n",
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d2bda78",
+   "id": "a1c6316e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c248b01c",
+   "id": "6552b784",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99c73d36",
+   "id": "40dc2792",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc3a37ca",
+   "id": "8b584799",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99391d68",
+   "id": "ca8cdb06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69e50b9f",
+   "id": "00490505",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b725b1b3",
+   "id": "b9597681",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "285dbd3c",
+   "id": "63ac9684",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b157a03",
+   "id": "52bbd83b",
    "metadata": {},
    "source": [
     "#### Section 5: validating the model"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ce88f65",
+   "id": "c53f5e6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ea70d50",
+   "id": "570c6bba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92155581",
+   "id": "d0ac56f6",
    "metadata": {},
    "source": [
     "#### Section 6: Push model to hugging-face library"
